infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec: 
      containers:
        # Это название важно только для процесса логирования
        - name: tickets 
          image: jgslahrb/tickets
          # Тут нужно чтобы была выполнена команда для создания ключа заранее
          # Вот эта: kubectl create secret generic jwt-secret --from-literal=JWT_KEY=asdf
          # Иначе kubectl не будет нахдить ключ с именем - jwt-secret
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec: 
  selector: 
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
