infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  replicas: 1
  selector:
    # Этот label нужен в Deployment для поиска pod который уже создан
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      # Этот label будет применяться для pod
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
      # Название для нашего порта
    - name: db
      protocol: TCP
      # Это Default port для mongo
      port: 27017
      targetPort: 27017
